--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,2 +1,21 @@
+engines:
+  rubocop:
+    enabled: true
+    #checks:
+    #	Rubocop/Metrics/ClassLength:
+    #  	enabled: false
+  golint:
+   	enabled: true
+  eslint:
+    enabled: true
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby:
+      	  mass_threshold: 30
+      - javascript
 exclude_paths:
   - react/test/**
