--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,13 @@
-ruby:
-  config_file: .rubocop.yml
+AllCops:
+  RunRailsCops: true
+
+# Commonly used screens these days easily fit more than 80 characters.
+Metrics/LineLength:
+  Max: 100
+
+Metrics/MethodLength:
+  Max: 20
+
+# Check with yard instead.
+Style/Documentation:
+  Enabled: false
